Add input boxes for other queries

--- a/unitedUmbrella/app/views/layouts/application.html.erb
+++ b/unitedUmbrella/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
               <ul>
                 <li><%= link_to "Home", root_url, :class => 'more scrolly' %></li>
                 <li><%= link_to "Public schools", '/public_lea', :class => 'more scrolly' %></li>
+                <li><%= link_to "Public school enrollments", '/public_school_enrollment', :class => 'more scrolly' %> </li>
               </ul>
             </div>
           </li>
