--- a/unitedUmbrella/app/views/private_schools_elementary_enrollment/compare_elementary_enrollment.html.erb
+++ b/unitedUmbrella/app/views/private_schools_elementary_enrollment/compare_elementary_enrollment.html.erb
@@ -21,5 +21,5 @@
             <% end %>
         <% end %>
         console.log(data_map);
-        draw_line_chart(data_map, "#graph");  
+        draw_line_chart(data_map, "#graph", "Private schools elementary enrollment");  
 </script>
